--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": ["eslint-config-gerard"],
-  "rules": {
-      "react/display-name": "warn"
-  }
+  "extends": ["eslint-config-gerard"]
 }
